header QR code using position and animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       rel="stylesheet"
       href="./assets/fonts/fontawesome-free-6.2.1-web/css/all.css"
     />
-    <title>Shoppee</title>
+    <title>Shoppee AikaDev</title>
+   <link rel="icon" href="./assets/image/AikadevLOGO.jpg">
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link
@@ -27,8 +28,17 @@
         <div class="grid">
           <nav class="header__navbar">
             <ul class="header__navbar-list">
-              <li class="header__navbar-item header__navbar-item--separate">
+              <li class="header__navbar-item header__navbar-item--QR header__navbar-item--separate">
                 Vào cửa hàng trên ứng dụng
+                <!-- todo:header QR code  done!!!-->
+                <div class="header__qr">
+                    <img src="./assets/image/QRcode.png" alt="" class="header__qr-img">
+                    <div class="header__qr-apps">
+                      <a href="" class="apps-link"><img src="./assets/image/appstore.png" alt="apps tore" class="header__qr-network"></a>
+                      <a href="" class="apps-link"><img src="./assets/image/google.png" alt="google play" class="header__qr-network"></a>
+                      <a href="" class="apps-link"><img src="./assets/image/AppGallery.png" alt="google play" class="header__qr-network"></a>
+                    </div>
+                </div>
               </li>
               <li class="header__navbar-item">
                 <span class="header__navbar-title--nopointer">Kết nối</span>
