--- a/index.html
+++ b/index.html
@@ -50,10 +50,48 @@
               <a href="" class="icon-link"><i class="fa-brands fa-instagram"></i></a>
             </ul>
             <ul class="header__navbar-list">
-              <li class="header__navbar-item">
+              <li class="header__navbar-item header__navbar-notify--hov">
                 <a href="#" class="header__navbar-item-link"
                   ><i class="fa-regular fa-bell"></i> Thông báo</a
                 >
+                <!-- todo notification -->
+                <div class="header__notify">
+                  <header class="header__notify-header">
+                    <h3>Thông báo mới nhận</h3>
+                  </header>
+                  <ul class="header__notify-list">
+                    <li class="header__notify-item">
+                      <a href="" class="header__notify-link">
+                        <img src="./assets/image/AikadevLOGO.jpg" alt="" class="header__notify-img">
+                        <div class="header__notify-info">
+                          <span class="header__notify-name">san pham lore</span>
+                          <span class="header__notify-discription">mo ta Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis odit nemo placeat quia esse a ipsum quisquam, molestias blanditiis velit excepturi voluptatum nihil reprehenderit rem voluptates corrupti, voluptatem est. Sit.</span>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item header__notify-item--viewed">
+                      <a href="" class="header__notify-link">
+                        <img src="./assets/image/AikadevLOGO.jpg" alt="" class="header__notify-img">
+                        <div class="header__notify-info">
+                          <span class="header__notify-name">san pham</span>
+                          <span class="header__notify-discription">mo ta</span>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item">
+                      <a href="" class="header__notify-link">
+                        <img src="./assets/image/AikadevLOGO.jpg" alt="" class="header__notify-img">
+                        <div class="header__notify-info">
+                          <span class="header__notify-name">san pham</span>
+                          <span class="header__notify-discription">mo ta</span>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                  <footer class="header__notify-footer">
+                    <a href="" class="header__notify-btn">Xem tất cả</a>
+                  </footer>
+                </div>
               </li>
               <li class="header__navbar-item">
                 <a href="#" class="header__navbar-item-link"
@@ -77,6 +115,14 @@
       <!-- todo:footer -->
       <footer class="footer"></footer>
     </div>
+    <!-- base modal -->
+
+<div class="modal">
+  <div class="modal__overlay"></div>
+  <div class="modal__body">
+    <div class="modal__inner"></div>
+  </div>
+</div>
 
     <!-- ! JS -->
     <script src="./assets/js/main.js"></script>
